fix overflow-x table-responsive and modal login template

--- a/app/assets/styles/main.sass
+++ b/app/assets/styles/main.sass
@@ -326,7 +326,12 @@ form .form-group.has-error .input-group-addon
   height: 50px
   margin: 0 auto
 
+.table-responsive
+    overflow: hidden
+
 @media screen and (max-width: 992px)
+    .table-responsive
+      overflow-x: auto
     .page-title .title-env
         padding: 0px !important
     .page-container .main-content
